<resources>
    <string name="app_name">Flatchat</string>
    <string name="featuredReview"> Featured Reviews </string>

    <!-- Home Screen -->
    <string name="search_for_flat"> Location, address or city </string>
    <string name="popular_flats">Popular Flats</string>
    <string name="show_all">Show All</string>

    <!-- CardView layout -->
    <string name="card_name">John</string>
    <string name="card_date">2020–06–07</string>
    <string name="flat_icon_description">This is an image of a flat</string>
    <string name="flat_icon_address">5 Castle St Dunedin</string>
    <string name="flat_icon_rating">4.9</string>

    <!-- Flat.kt strings -->
    <string name="flat_image">Image of the flat</string>
    <string name="flat_address">660 Castle St Dunedin</string>
    <string name="star">Star</string>

    <!-- Button Strings -->
    <string name="show_all_reviews">Show All Reviews</string>
    <string name="add_review">Add a Review</string>
    <string name="anonymous">Anonymous</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <!-- Review Strings -->
    <string name="overall_rating">4.65 (3 reviews)</string>
    <string name="comment">A great location. Nice and peaceful and a short walk from the center of uni. Well insulated but does get to hot.</string>
    <string name="report">report comment</string>
    <string name="date">28th January 2018</string>
    <string name="reviewer">Ryan Cole</string>
    <string name="comment_hint">Write comment here</string>
    <string name="delreview">Delete Review</string>
    <string name="report_rev">Report</string>
    <string name="edit_rev">Edit</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="report_confirmation">Do you want to report this comment?</string>


    <!-- Create account Strings -->
    <string name="sign_up_button"> Sign Up  </string>
    <string name="firstName"> First Name </string>
    <string name="lastName"> Last Name </string>

    <!-- Settings page Strings -->
    <string name="changePassButton"> Change Password </string>
    <string name="logout"> Logout </string>

    <!-- flat name for action bar Strings -->

    <!-- login screen Strings -->
    <string name="forgotPass"> Forgot password? </string>
    <string name="noAccount"> Don\'t have an account? </string>
    <string name="Login"> Login </string>
    <string name="password_hint"> Password </string>
    <string name="email_hint"> Email </string>
    <string name="SignUp"> Sign Up </string>
    <string name="enter_your_email">Enter Email here</string>
    <string name="account">Account</string>
    <string name="add_flat">Add Flat</string>
    <string name="create">CREATE</string>
    <string name="search">search</string>
    <string name="home">Home</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="flatchat">flatchat</string>
    <string name="street_name">Street Name</string>
    <string name="suburb">Suburb</string>
    <string name="region">Region</string>
    <string name="number_bedrooms_example">4</string>
    <string name="bedrooms">Bedrooms:</string>
    <string name="Two">2</string>
    <string name="bathrooms">Bathrooms:</string>
    <string name="_660_castle_street">660 Castle Street</string>
    <string name="north_dunedin">North Dunedin</string>
    <string name="dunedin">Dunedin</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_an_image">Upload an image</string>
    <string name="del_account">Delete Account</string>
    <string name="needHelp">Need Help</string>
    <string name="splash_house">Splash House</string>
    <string name="featured_flats">Featured Flats</string>
    <string name="value">Value</string>
    <string name="location">Location</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="reviews_for_flat_screen">%s \t \t (%d reviews)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="current_address_optional">Current Address (optional)</string>
    <string name="tenant">Tenant</string>
    <string name="i_am_a">I am a…</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="splashhouse">Splash House</string>
    <string name="landlord">Landlord</string>
    <string name="camera">Camera</string>
    <string name="one_decimal">%.1f</string>
    <string name="create_account">Create Account</string>
    <string name="trouble_signing_in"> <u>Trouble signing in?</u></string>
    <string name="recent_reviews">Recent Reviews</string>
    <string name="r">R</string>
    <string name="lorem">Lorem</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="bed">Bed</string>
    <string name="map_icon">Map Icon</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="enter_the_address_in_the_search_bar_to_find_your_flat">Enter the address in the search bar to find your flat</string>


</resources>
