<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flat_card_view"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#FFFFFF">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/flat_icon_description"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/flat_icon_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/flat_icon_address"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/flat_icon_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:drawableStart="@android:drawable/btn_star"
        android:drawableLeft="@android:drawable/btn_star"
        android:gravity="center"
        android:text="@string/flat_icon_rating"
        android:textColor="#000000"
        android:textSize="20sp" />

</androidx.cardview.widget.CardView>