<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flat_card_view"
    android:layout_width="wrap_content"
    android:layout_height="230dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="25dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@color/quantum_grey"
            android:contentDescription="@string/flat_icon_description"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flat_icon_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/flat_icon_address"
                android:textColor="#000000"
                android:textSize="20sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/flat_icon_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="end"
                android:text="@string/flat_icon_rating"
                android:textColor="#000000"
                android:textSize="18sp"
                android:padding="4dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>